# SFML-CMake-Starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.bat
Game/: Anim_Base.cpp  Anim_Base.h  Anim_Directional.cpp  Anim_Directional.h  Ball.cpp  Ball.h  BaseState.h  Bitmask.h  Bullet.cpp  Bullet.h  CMakeLists.txt  C_Base.h  C_Drawable.h  C_Position.h  C_SpriteSheet.h  Character.cpp  Character.h  Communicator.h  DebugOverlay.h  Directions.h  ECS_Types.h  Enemy.cpp  Enemy.h  EntityBase.cpp  EntityBase.h  EntityEvents.h  EntityManager.cpp  EntityManager.h  EntityMessages.h  Entity_Manager.cpp  EventManager.cpp  EventManager.h  Event_Queue.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  Message.h  MessageHandler.h  (+41 more)
Game/Assets/: textures.cfg
Game/Resources/: textures.cfg
Game/Textures/: SpaceShooter.xcf
Resources/: CMakeSFMLStarter.xcf
